<resources>
    <string name="app_name">Goblin Finder</string>
    <string name="btnString">Home</string>
    <string name="bakemono_intro">You have found a Bakemono!</string>
    <string name="bakemono_appearance">
        The appearance of a Bakemono varies by individual, but generally speaking they will have short, misshapen bodies, small wings, tails, cloven hooves, large noses and drooping ears. These goblins come in many skin colors ranging from bright orange to dark blue, covered in either scales or fur. The color of their eyes differs between black, yellow, green, and grey. It is very common for a Bakemono to traverse the landscape without wearing any articles of clothing. Those who are dressed will don the attire of their last victim.
    </string>
    <string name="bakemono_society_pt.1">
        An average Bakemono tribes will number between 20 and 80 members. So if your unlucky enough to see one, there are probably more nearby. These large communities are ruled by a sacred shaman, known as an Oni. Despite this sense of unity, Bakemono lack the loyalty to pledge themselves to one clan and would often leave to join other faction impulsively. Like most goblins, internecine combat is an ordinary sight amongst their kind. When they’re not fighting amid themselves, they will raid nearby human settlements or attack travelers.
    </string>
    <string name="bakemono_society_pt.2">
        These ferocious brutes prefer to ambush their target and are usually seen recklessly charging into battle. Rarely, if ever, do the Bakemono have their own weapons or armor. The arms they wield during times of conflict are more often than not, taken from their previous victims, usually in terrible condition. When it comes to protecting themselves in combat, they have been known to weave together different pieces of mail or plate with rope and strings in a rough patchwork to fit their misshapen bodies.
    </string>
    <string name="bakemono_ecology">
        Reasoning with these creatures would be pointless as Bakemono are ruthless animals who see anything that moves as a potential threat. Over the years, they have treated mankind with such animosity, that they will attack any human settlement with no hesitation or forethought.
    </string>
    <string name="batiri_intro">You have found a Batiri!</string>
    <string name="batiri_appearance">
        Dwelling in primarily jungle environments, their green skin allows them to camouflage in their natural surroundings. Batiri are often dressed in rags as their more prestigious warriors or chieftains display themselves in dinosaur-hide breastplates and helmets.
    </string>
    <string name="batiri_society">
        Each clan will usually have a population between 25 and 200 goblins, all under the influence of an ordained chieftain. Their anointed leader will shepherd his followers in thick, lush forests or jungles, pursuing a nomadic lifestyle. In spite of their pilgrimage like personality, there have been accounts of Batiri huts constructed in various parts of their domain. However, these habitats were made to provide temporary shelter and protection from the elements. These dwellings would often be abandoned, only to be occupied by a roaming clan for the day.
    </string>
    <string name="batiri_ecology">
        Batiri are nocturnal creatures by instinct as they hunt in the middle of the night. They use the secrecy and eerie atmosphere of their climate to stalk their prey. While most use crude shortbows and poorly made spears, some of their most experienced warriors will wield stolen weapons from human settlements or fallen adventurers. Some have claimed the Batiri are cannibals since they will eat the flesh of any animal they come across. Regardless of popular belief, it’s considered immoral for Batiri to eat their own kind, even if they hailed from an enemy clan. Committing such an act would be punished by death.
    </string>
    <string name="dekanter_intro">You have found a Dekanter!</string>
    <string name="dekanter_appearance">
        Years of genetic mutations and artificial elixirs by wizard scientists, led to the creation of the Dekanter goblins. These creatures are considered to be more aggressive than their average predecessors. Several accounts by adventurers have claimed that these beasts have a stockier build than most variants of their species. Other claims have said they wear their black hair below the shoulders with orange or red skin underneath. Perhaps one of their most defining features is the rhinoceros-like horn just above their mouths.
    </string>
    <string name="dekanter_society">
        Months of research and studies have told us that these goblins worship a divine entity known as the Beast Lord in a mountain environment. They show their religious devotion by patrolling the depths of their sierra in groups up to 40 at a time, with the help of Gargoyles.
    </string>
    <string name="dekanter_ecology">
        Dekanter goblins prefer the dark depths of a mountain than the forests or jungles of their cousins. The amount of time they’ve spent in the underdepths has gained them the ability to withstand the cold at extreme temperatures. Often times they will attack anyone they deem a threat to their lord. However, they have been well-known to hesitate if their “enemy” is a superior force.
    </string>
    <string name="nilbog_intro">You have found a Nilbog!</string>
    <string name="nilbog_appearance">
        Nilbogs will usually be seen traveling the outdoors without a care in the world. These goblins are often dressed in finer clothes than their brethren, often cackling with a smirky grin on their face.
    </string>
    <string name="nilbog_society">
        In a realm of constant war and fear amongst their people, it may seem odd to see these shaman-like goblins with an upbeat attitude. This is due to the fear of Nilbogs amid their society, primarily by the mystical powers they possess and how they wield it. Unlike their combat ready counterparts, a Nilbog would rather heal itself than try to stab another living thing. Those who make the fatal error of attacking a Nilbog may fall to the influence of Nilbogism. What happens is that the unfortunate individual will inherit magical powers that can affect the behavior of nearby goblins.
    </string>
    <string name="nilbog_ecology">
        The fear of being enchanted by this unknown power has caused these goblins to gain a status of immunity by their more ferocious members. With these labels you may think a Nilbog would go on a killing rampage as they strike fear in the hearts of their people. However, most would rather trick fellows goblins to do their bidding, than maim them. Outside of harassing their own race, there have been occurrences where they have tricked human travelers to hand over all of their belongings with a mere flick of the wrist.
    </string>
    <string name="hobgoblin_intro">You have found a Hobgoblin!</string>
    <string name="bugbear_intro">You have found a Bugbear!</string>
    <string name="bugbear_appearance">
        Most adventurers will often mistake these beasts as a wolverine, instead of a goblin. Draped with fur from head to toe with a massive frame, claws for hands and standing at an average height of 7ft tall, the Bugbear is not a beast you want to make angry. While you could easily outsmart these dim-witted creatures in a game of chess, fighting a Bugbear should only be attempted the most courageous, or suicidal, of your party.
    </string>
    <string name="bugbear_society">
        Violent tempers and a disregard for diplomacy makes reasoning with them a lost cause. They will often be in tribes made up of goblins, since a party of primarily Hobgoblins and Bugbears are often killed by other factions as a general precaution. Although there are some smaller independent Bugbear tribes out in the wild, most have come to their senses that staying with goblins is safer for their race as a whole.
    </string>
    <string name="bugbear_ecology">
        These hairy beasts are used as the muscle of a goblin tribe doing the back breaking labor and serving as soldiers in times of conflict. Most of the negotiating and talks are done by their Hobgoblin warlords as a Bugbear would rather be pointed towards the approaching enemy, than waste their time in day to day politics.
    </string>
    <string name="koalinth_intro">You have found a Koalinth!</string>
    <string name="koalinth_appearance">
        Green scaly flesh with moss covered shoulders, the Koalinth inhabit large bodies of water for prey and shelter. They share the same bone structure of Hobgoblins, with the exception of webbed hands and feet.
    </string>
    <string name="koalinth_society">
        These creatures share the mindset of their Hobgoblin cousins as their society is very similar in nature. Each tribe is lead by local chiefs who follow one prestigious shaman. Their lairs are established in grottos, underground sea caverns, and shallow freshwater caves.
    </string>
    <string name="koalinth_ecology">
        Acting like their land dwelling brethren in combat, Koalinths will often raid human coastal settlements with the help of nets to capture important figures for ransom or leverage of neighboring tribes.
    </string>
    <string name="verdan_intro">You have found a Verdan!</string>
    <string name="verdan_appearance">
        After a series of mutations between elves and goblins, the Verdan race was created. Their young are often thought of as Goblins, while the elders of this faction are considered to be deformed elves by the outside world. Possessing the pointed ears of an Elf and the bulbous nose of Goblins, the Verdan people will come in different shades of green from pale white to jet black.
    </string>
    <string name="verdan_society">
        Even though they share some common traits with their more violent cousins like the Bugbear or the Hobgoblin. They use their internal ferocity to defend themselves from any forces of oppression as they approve of freedom and expression of diversity; While their distant relatives would rather kill each other and enslave the defeated.
    </string>
    <string name="verdan_ecology">
        The Verdan spend their entire lives on the road, accepting any culture they come across. They’ve been known to change their names to be more accommodating to any group they come in contact with. Despite them being very heart warming and trustworthy to any peaceful communities, they don’t have a sense of belonging which is a major factor in their nomadic lifestyle.
    </string>
    <string name="forestkith_intro">You have found a Forestkith!</string>
    <string name="forestkith_appearance">
        Thought of as an ape-like goblin, the Forestkith have longer arms than a normal goblin along with hand-like feet on their fur-covered bodies. The only features that make them look remotely like goblins are the facial features upon their hairy exteriors.
    </string>
    <string name="forestkith_society">
        These green apes prefer thick forests and jungles to use their impressive climbing abilities. Often seen as savages, Forestkiths have no written language or sophisticated cultures. They spend their time migrating in nomadic tribes, swinging from one tree to another. How these tribes are kept in order is being able to provide food for each member and securing even more food
    </string>
    <string name="forestkith_ecology">
        To satisfy this unspoken precedence, these apes will take to extreme measures when it comes to fighting other races. Forestkiths have been known to wildly attack any living creature, which, over time, has led to their lowered numbers.
    </string>
</resources>