<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.something.goblinfinder.batiri">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="296dp"
                    android:layout_height="215dp"
                    android:layout_marginTop="28dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/batiri" />

                <TextView
                    android:id="@+id/batiri_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/batiri_intro"
                    android:textColor="@color/stringColor"
                    android:layout_gravity="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="138dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/batiri_appearance"
                    android:textColor="@color/stringColor"
                    android:layout_gravity="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="261dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/batiri_society"
                    android:textColor="@color/stringColor"
                    android:layout_gravity="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/batiri_ecology"
                    android:textColor="@color/stringColor"
                    android:layout_gravity="center"
                    android:textSize="18sp"  />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="338dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/btnColor"
                    android:text="@string/btnString"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>