<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".nilbog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/nilbog"
                    android:layout_width="118dp"
                    android:layout_height="190dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/nilbog" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nilbog_intro"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nilbog_appearance"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nilbog_appearance"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nilbog_society"
                    android:layout_width="344dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nilbog_society"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nilbog_ecology"
                    android:layout_width="344dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nilbog_ecology"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/btnColor"
                    android:text="@string/btnString"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>