<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".bugbear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bugbear"
                    android:layout_width="259dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/bugbear" />

                <TextView
                    android:id="@+id/bugbear_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/bugbear_intro"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bugbear_appearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/bugbear_appearance"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bugbear_society"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/bugbear_society"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bugbear_ecology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/bugbear_ecology"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btnColor"
                    android:text="@string/btnString"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>