<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forestkith"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/forestkith"
                    android:layout_width="193dp"
                    android:layout_height="251dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/forestkith" />

                <TextView
                    android:id="@+id/forestkith_intro"
                    android:layout_width="236dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/forestkith_intro"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forestkith_appearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/forestkith_appearance"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forestkith_society"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/forestkith_society"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forestkith_ecology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/forestkith_ecology"
                    android:textColor="@color/stringColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="352dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@color/btnColor"
                    android:text="@string/btnString"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>>

</androidx.constraintlayout.widget.ConstraintLayout>